--- a/src/styles.css
+++ b/src/styles.css
@@ -628,21 +628,20 @@ video {
   font-size: 1.5rem;
   line-height: 2rem;
 }
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 .text-6xl {
   font-size: 3.75rem;
   line-height: 1;
 }
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
-}
 .text-8xl {
   font-size: 6rem;
   line-height: 1;
+}
+.text-\[5rem\] {
+  font-size: 5rem;
 }
 .text-lg {
   font-size: 1.125rem;
@@ -669,6 +668,9 @@ video {
 }
 .leading-9 {
   line-height: 2.25rem;
+}
+.leading-\[0\.85\] {
+  line-height: 0.85;
 }
 .leading-\[0\.95\] {
   line-height: 0.95;
@@ -717,6 +719,10 @@ video {
 
   .md\:top-\[-15px\] {
     top: -15px;
+  }
+
+  .md\:mt-0 {
+    margin-top: 0px;
   }
 
   .md\:mt-6 {
