--- a/src/styles.css
+++ b/src/styles.css
@@ -643,6 +643,10 @@ video {
   padding-left: 1rem;
   padding-right: 1rem;
 }
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -743,9 +747,6 @@ video {
 }
 .opacity-50 {
   opacity: 0.5;
-}
-.opacity-70 {
-  opacity: 0.7;
 }
 .hover\:bg-orange-400:hover {
   --tw-bg-opacity: 1;
