--- a/src/styles.css
+++ b/src/styles.css
@@ -861,6 +861,11 @@ video {
     text-align: left;
   }
 
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
   .md\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
