--- a/src/main-styles.css
+++ b/src/main-styles.css
@@ -894,7 +894,18 @@ video {
 }
 
 .gallery-container {
-  /*display: grid;*/
-  /*grid-template-columns: repeat(1, minmax(0, 1fr));*/
-  gap: 8px;
+  column-count: 3;
+  -webkit-column-gap: 12px;
+  -moz-column-gap: 12px;
+  column-gap: 12px;
+
+  .gallery-item {
+    overflow: hidden;
+    padding-bottom: 12px;
+  }
+}
+
+.protect-image{
+  pointer-events: none;
+  background-size: cover;
 }
