--- a/src/main-styles.css
+++ b/src/main-styles.css
@@ -518,6 +518,9 @@ video {
     max-width: 1536px;
   }
 }
+.fixed {
+  position: fixed;
+}
 .absolute {
   position: absolute;
 }
@@ -533,11 +536,20 @@ video {
 .-top-3 {
   top: -0.75rem;
 }
+.left-0 {
+  left: 0px;
+}
+.right-2 {
+  right: 0.5rem;
+}
 .right-4 {
   right: 1rem;
 }
 .top-0 {
   top: 0px;
+}
+.top-2 {
+  top: 0.5rem;
 }
 .top-5 {
   top: 1.25rem;
@@ -548,6 +560,9 @@ video {
 .z-10 {
   z-index: 10;
 }
+.z-50 {
+  z-index: 50;
+}
 .col-span-1 {
   grid-column: span 1 / span 1;
 }
@@ -557,6 +572,9 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+.mb-4 {
+  margin-bottom: 1rem;
 }
 .mb-5 {
   margin-bottom: 1.25rem;
@@ -591,11 +609,26 @@ video {
 .inline-block {
   display: inline-block;
 }
+.flex {
+  display: flex;
+}
 .grid {
   display: grid;
 }
 .hidden {
   display: none;
+}
+.h-auto {
+  height: auto;
+}
+.h-full {
+  height: 100%;
+}
+.max-h-60 {
+  max-height: 60vh;
+}
+.max-h-full {
+  max-height: 100%;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -631,11 +664,43 @@ video {
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
+.flex-col {
+  flex-direction: column;
+}
+.items-center {
+  align-items: center;
+}
+.justify-center {
+  justify-content: center;
+}
+.justify-between {
+  justify-content: space-between;
+}
+.gap-4 {
+  gap: 1rem;
+}
 .gap-y-3 {
   row-gap: 0.75rem;
 }
 .gap-y-6 {
   row-gap: 1.5rem;
+}
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+.overflow-auto {
+  overflow: auto;
+}
+.overflow-hidden {
+  overflow: hidden;
+}
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+.break-words {
+  overflow-wrap: break-word;
 }
 .rounded {
   border-radius: 0.25rem;
@@ -643,8 +708,17 @@ video {
 .rounded-2xl {
   border-radius: 1rem;
 }
+.rounded-full {
+  border-radius: 9999px;
+}
+.rounded-lg {
+  border-radius: 0.5rem;
+}
 .rounded-xl {
   border-radius: 0.75rem;
+}
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.8\)\] {
+  background-color: rgba(0,0,0,0.8);
 }
 .bg-\[rgba\(47\2c 65\2c 91\2c 0\.3\)\] {
   background-color: rgba(47,65,91,0.3);
@@ -652,14 +726,24 @@ video {
 .bg-\[rgba\(47\2c 65\2c 91\2c 0\.8\)\] {
   background-color: rgba(47,65,91,0.8);
 }
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
 .bg-gray-800 {
   --tw-bg-opacity: 1;
-  /*background-color: rgb(31 41 55 / var(--tw-bg-opacity));*/
-  background-color: black;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 .bg-hat {
   --tw-bg-opacity: 1;
   background-color: rgb(255 107 51 / var(--tw-bg-opacity));
+}
+.bg-opacity-75 {
+  --tw-bg-opacity: 0.75;
+}
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .p-2 {
   padding: 0.5rem;
@@ -692,6 +776,9 @@ video {
 .pb-5 {
   padding-bottom: 1.25rem;
 }
+.pb-8 {
+  padding-bottom: 2rem;
+}
 .text-center {
   text-align: center;
 }
@@ -699,8 +786,7 @@ video {
   font-family: "Inter", sans-serif;
 }
 .font-staat {
-  /*font-family: "Staatliches", sans-serif;*/
-  font-family: 'Muller Next Trial', sans-serif;
+  font-family: "Muller Next Trial", sans-serif;
 }
 .text-2xl {
   font-size: 1.5rem;
@@ -714,6 +800,10 @@ video {
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
 .text-6xl {
   font-size: 3.75rem;
   line-height: 1;
@@ -722,12 +812,22 @@ video {
   font-size: 6rem;
   line-height: 1;
 }
+.text-\[2rem\] {
+  font-size: 2rem;
+}
+.text-\[3rem\] {
+  font-size: 3rem;
+}
 .text-\[5rem\] {
   font-size: 5rem;
 }
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 .text-xl {
   font-size: 1.25rem;
@@ -795,17 +895,42 @@ video {
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.hover\:bg-gray-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
 .hover\:bg-orange-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(251 146 60 / var(--tw-bg-opacity));
 }
 @media (min-width: 640px) {
 
+  .sm\:-left-14 {
+    left: -3.5rem;
+  }
+
+  .sm\:-left-5 {
+    left: -1.25rem;
+  }
+
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
+
+  .sm\:text-\[2rem\] {
+    font-size: 2rem;
+  }
 }
 @media (min-width: 768px) {
+
+  .md\:-left-0 {
+    left: -0px;
+  }
 
   .md\:-left-14 {
     left: -3.5rem;
@@ -835,6 +960,14 @@ video {
     top: -15px;
   }
 
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .md\:ml-4 {
+    margin-left: 1rem;
+  }
+
   .md\:mr-\[2\%\] {
     margin-right: 2%;
   }
@@ -851,12 +984,36 @@ video {
     display: flex;
   }
 
+  .md\:w-1\/2 {
+    width: 50%;
+  }
+
+  .md\:w-48 {
+    width: 12rem;
+  }
+
   .md\:w-\[120\%\] {
     width: 120%;
   }
 
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
+  .md\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 
   .md\:p-0 {
@@ -885,28 +1042,39 @@ video {
   .md\:text-\[15rem\] {
     font-size: 15rem;
   }
-}
 
-.gallery-card {
-  /*display: grid;*/
-  grid-template-columns: repeat(1, minmax(0, 1fr));
-  gap: 1.25rem;
-}
+  .md\:text-\[2rem\] {
+    font-size: 2rem;
+  }
 
-.gallery-container {
-  column-count: 3;
-  -webkit-column-gap: 12px;
-  -moz-column-gap: 12px;
-  column-gap: 12px;
+  .md\:text-\[3rem\] {
+    font-size: 3rem;
+  }
 
-  .gallery-item {
-    overflow: hidden;
-    padding-bottom: 12px;
-    cursor: pointer;
+  .md\:text-\[5rem\] {
+    font-size: 5rem;
   }
 }
+@media (min-width: 1024px) {
 
-.protect-image{
-  pointer-events: none;
-  background-size: cover;
+  .lg\:-left-14 {
+    left: -3.5rem;
+  }
+
+  .lg\:-left-3 {
+    left: -0.75rem;
+  }
+
+  .lg\:-left-5 {
+    left: -1.25rem;
+  }
+
+  .lg\:max-w-7xl {
+    max-width: 80rem;
+  }
+
+  .lg\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
 }
